[package]
name = "libraw-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
libraw-rs = { path = "../libraw-rs/libraw" }
libraw-rs-sys = { version = "0.0.4", path = "../libraw-rs/libraw-sys" }